--- a/.github/workflows/padavan-3.4.yml
+++ b/.github/workflows/padavan-3.4.yml
@@ -57,7 +57,7 @@ on:
         default: 'true'
 
 env:
-  REPOSITORY_URL: https://github.com/yuos-bit/Padavan
+  REPOSITORY_URL: https://github.com/F91forever/Padavan
   WORK_PATH: /opt/padavan-3.4
   TIME_ZONE: Asia/Shanghai
   FIRMWARE_DATEPREFIX: $(date +"%Y%m%d")
